--- a/Sudoku/Symmetries/Naive/Order2/Order2.dproj
+++ b/Sudoku/Symmetries/Naive/Order2/Order2.dproj
@@ -116,6 +116,7 @@
         <DCCReference Include="..\..\..\..\Common\SparseMatrix\SparseMatrix.pas"/>
         <DCCReference Include="..\..\CellCount\CellCountSymmetries.pas"/>
         <DCCReference Include="..\..\Graph\GraphSymmetries.pas"/>
+        <DCCReference Include="..\..\Shared\CellCountShared.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
