--- a/Sudoku/Symmetries/Naive/Order3/Order3.dproj
+++ b/Sudoku/Symmetries/Naive/Order3/Order3.dproj
@@ -114,6 +114,7 @@
         <DCCReference Include="..\..\..\..\Common\SparseMatrix\SparseMatrix.pas"/>
         <DCCReference Include="..\..\CellCount\CellCountSymmetries.pas"/>
         <DCCReference Include="..\..\Graph\GraphSymmetries.pas"/>
+        <DCCReference Include="..\..\Shared\CellCountShared.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
