General: Indexed store changes: Fix build for all apps, cleanup some cruft.

--- a/CoCoDM/Source/CocoDelphi.dproj
+++ b/CoCoDM/Source/CocoDelphi.dproj
@@ -3,12 +3,12 @@
         <ProjectGuid>{544BE0F1-45EA-41DF-82F8-87A144D7A410}</ProjectGuid>
         <MainSource>CocoDelphi.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Release</Config>
+        <Config Condition="'$(Config)'==''">Debug</Config>
         <TargetedPlatforms>3</TargetedPlatforms>
         <AppType>Console</AppType>
         <FrameworkType>VCL</FrameworkType>
         <ProjectVersion>14.6</ProjectVersion>
-        <Platform Condition="'$(Platform)'==''">Win64</Platform>
+        <Platform Condition="'$(Platform)'==''">Win32</Platform>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
         <Base>true</Base>
