--- a/Common/MemDB/Test/MemDBTest.dproj
+++ b/Common/MemDB/Test/MemDBTest.dproj
@@ -121,6 +121,11 @@
         <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2_Win64)'!=''">
+        <DCC_DebugInfoInExe>true</DCC_DebugInfoInExe>
+        <DCC_RemoteDebug>true</DCC_RemoteDebug>
+        <DCC_MapFile>3</DCC_MapFile>
+        <DCC_DebugInformation>true</DCC_DebugInformation>
+        <DCC_LocalDebugSymbols>true</DCC_LocalDebugSymbols>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
     </PropertyGroup>
     <ItemGroup>
@@ -144,9 +149,8 @@
         <DCCReference Include="..\..\WorkItems\DLThreadQueue.pas"/>
         <DCCReference Include="..\MemDBApi.pas"/>
         <DCCReference Include="..\..\CachedStream\BufferedFileStream.pas"/>
-        <DCCReference Include="..\..\WorkItems\CommonPool.pas"/>
-        <DCCReference Include="..\..\WorkItems\WorkItems.pas"/>
         <DCCReference Include="..\..\Logging\GlobalLog.pas"/>
+        <DCCReference Include="..\..\Parallelizer\Parallelizer.pas"/>
         <None Include="..\Ideas, and TODO.txt"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
