Misc: Fix build after common library changes.

--- a/CheckIn service/CheckInService.dproj
+++ b/CheckIn service/CheckInService.dproj
@@ -166,6 +166,7 @@
         <DCCReference Include="..\Common\Logging\GlobalLog.pas"/>
         <DCCReference Include="..\Common\HTMLParser\HTMLEscapeHelper.pas"/>
         <DCCReference Include="..\Common\QueuedMailer\QueuedMailer.pas"/>
+        <DCCReference Include="..\Common\Parallelizer\Parallelizer.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
