--- a/MMapper/MMapper.dproj
+++ b/MMapper/MMapper.dproj
@@ -183,6 +183,7 @@
         <DCCReference Include="..\Common\HTMLParser\ErrorRecovery.pas"/>
         <DCCReference Include="..\Common\SoftLexer\SoftLexer.pas"/>
         <DCCReference Include="..\Common\OrdinalSets\OrdinalSets.pas"/>
+        <DCCReference Include="..\Common\Parallelizer\Parallelizer.pas"/>
         <None Include="Ideas, and TODO.txt"/>
         <None Include="..\Common\HTMLParser\HTMLGrammar.ATG"/>
         <None Include="..\Common\HTMLParser\HTMLGrammar.AGI"/>
