--- a/Sudoku/Symmetries/CellCountMT/Order3/Order3.dproj
+++ b/Sudoku/Symmetries/CellCountMT/Order3/Order3.dproj
@@ -126,6 +126,7 @@
         <DCCReference Include="..\..\..\..\Common\Tracking\Trackables.pas"/>
         <DCCReference Include="..\..\..\..\Common\WorkItems\WorkItems.pas"/>
         <DCCReference Include="..\..\Shared\CellCountShared.pas"/>
+        <DCCReference Include="..\..\..\..\Common\Parallelizer\Parallelizer.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
