--- a/CheckIn Testapps/HTTP Server GUI/ServerApp.dproj
+++ b/CheckIn Testapps/HTTP Server GUI/ServerApp.dproj
@@ -156,6 +156,7 @@
         <DCCReference Include="..\..\Common\HTTPServerDispatcher\HTTPForwarder.pas"/>
         <DCCReference Include="..\..\Common\HTTPServerDispatcher\HTTPMisc.pas"/>
         <DCCReference Include="..\..\CheckIn\CheckInServiceCoOrdinator.pas"/>
+        <DCCReference Include="..\..\Common\Parallelizer\Parallelizer.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
