--- a/KnowComment/KnowComment/KnowComment.dproj
+++ b/KnowComment/KnowComment/KnowComment.dproj
@@ -214,6 +214,7 @@
             <Form>PrefsEditFrm</Form>
             <FormType>fmx</FormType>
         </DCCReference>
+        <DCCReference Include="..\..\Common\Parallelizer\Parallelizer.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
