--- a/Sudoku/Sudoku1/Sudoku.dproj
+++ b/Sudoku/Sudoku1/Sudoku.dproj
@@ -149,6 +149,7 @@
         <DCCReference Include="..\SudokuShared\SudokuExactCover.pas"/>
         <DCCReference Include="..\..\Common\ExactCover\ExactCover.pas"/>
         <DCCReference Include="..\..\Common\SparseMatrix\SparseMatrix.pas"/>
+        <DCCReference Include="..\..\Common\Parallelizer\Parallelizer.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
