--- a/Sudoku/Symmetries/KnownSolnSymmetries/KnownSymmetries.dproj
+++ b/Sudoku/Symmetries/KnownSolnSymmetries/KnownSymmetries.dproj
@@ -132,6 +132,7 @@
         <DCCReference Include="..\..\..\Common\Tracking\Trackables.pas"/>
         <DCCReference Include="..\Shared\SharedSymmetries.pas"/>
         <DCCReference Include="..\Shared\CellCountShared.pas"/>
+        <DCCReference Include="..\..\..\Common\Parallelizer\Parallelizer.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
