--- a/Common/MemDB/Test/MemDBTest.dproj
+++ b/Common/MemDB/Test/MemDBTest.dproj
@@ -124,8 +124,6 @@
         <DCC_DebugInfoInExe>true</DCC_DebugInfoInExe>
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
         <DCC_MapFile>3</DCC_MapFile>
-        <DCC_DebugInformation>true</DCC_DebugInformation>
-        <DCC_LocalDebugSymbols>true</DCC_LocalDebugSymbols>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
     </PropertyGroup>
     <ItemGroup>
@@ -151,6 +149,7 @@
         <DCCReference Include="..\..\CachedStream\BufferedFileStream.pas"/>
         <DCCReference Include="..\..\Logging\GlobalLog.pas"/>
         <DCCReference Include="..\..\Parallelizer\Parallelizer.pas"/>
+        <DCCReference Include="..\..\NullStream\NullStream.pas"/>
         <None Include="..\Ideas, and TODO.txt"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
