--- a/CheckIn Testapps/HTTP Server GUI/ServerApp.dproj
+++ b/CheckIn Testapps/HTTP Server GUI/ServerApp.dproj
@@ -157,6 +157,8 @@
         <DCCReference Include="..\..\Common\HTTPServerDispatcher\HTTPMisc.pas"/>
         <DCCReference Include="..\..\CheckIn\CheckInServiceCoOrdinator.pas"/>
         <DCCReference Include="..\..\Common\Parallelizer\Parallelizer.pas"/>
+        <DCCReference Include="..\..\Common\LockAbstractions\LockAbstractions.pas"/>
+        <DCCReference Include="..\..\Common\NullStream\NullStream.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
