--- a/CheckIn service/CheckInService.dproj
+++ b/CheckIn service/CheckInService.dproj
@@ -167,6 +167,9 @@
         <DCCReference Include="..\Common\HTMLParser\HTMLEscapeHelper.pas"/>
         <DCCReference Include="..\Common\QueuedMailer\QueuedMailer.pas"/>
         <DCCReference Include="..\Common\Parallelizer\Parallelizer.pas"/>
+        <DCCReference Include="..\Common\LockAbstractions\LockAbstractions.pas"/>
+        <DCCReference Include="..\Common\SRWLockWrapper\SRWLockWrapper.pas"/>
+        <DCCReference Include="..\Common\NullStream\NullStream.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
