--- a/KnowComment/KnowComment/KnowComment.dproj
+++ b/KnowComment/KnowComment/KnowComment.dproj
@@ -215,6 +215,8 @@
             <FormType>fmx</FormType>
         </DCCReference>
         <DCCReference Include="..\..\Common\Parallelizer\Parallelizer.pas"/>
+        <DCCReference Include="..\..\Common\LockAbstractions\LockAbstractions.pas"/>
+        <DCCReference Include="..\..\Common\NullStream\NullStream.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
