--- a/Sudoku/Sudoku1/Sudoku.dproj
+++ b/Sudoku/Sudoku1/Sudoku.dproj
@@ -150,6 +150,7 @@
         <DCCReference Include="..\..\Common\ExactCover\ExactCover.pas"/>
         <DCCReference Include="..\..\Common\SparseMatrix\SparseMatrix.pas"/>
         <DCCReference Include="..\..\Common\Parallelizer\Parallelizer.pas"/>
+        <DCCReference Include="..\..\Common\LockAbstractions\LockAbstractions.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
