--- a/Sudoku/Symmetries/CellCountMT/Order2/Order2.dproj
+++ b/Sudoku/Symmetries/CellCountMT/Order2/Order2.dproj
@@ -115,6 +115,7 @@
         <DCCReference Include="..\..\..\..\Common\WorkItems\WorkItems.pas"/>
         <DCCReference Include="..\..\Shared\CellCountShared.pas"/>
         <DCCReference Include="..\..\..\..\Common\Parallelizer\Parallelizer.pas"/>
+        <DCCReference Include="..\..\..\..\Common\LockAbstractions\LockAbstractions.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
