--- a/Sudoku/Symmetries/KnownSolnSymmetries/KnownSymmetries.dproj
+++ b/Sudoku/Symmetries/KnownSolnSymmetries/KnownSymmetries.dproj
@@ -133,6 +133,7 @@
         <DCCReference Include="..\Shared\SharedSymmetries.pas"/>
         <DCCReference Include="..\Shared\CellCountShared.pas"/>
         <DCCReference Include="..\..\..\Common\Parallelizer\Parallelizer.pas"/>
+        <DCCReference Include="..\..\..\Common\LockAbstractions\LockAbstractions.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
