MemDB: Remove minicommit, relax FK checking.
MemDB: Remove minicommit in preparation for non-exclusive writes.
MemDB: Relax foreign key restriction to allow same-table foreign keys.

--- a/Common/MemDB/Test/MemDBTest.dproj
+++ b/Common/MemDB/Test/MemDBTest.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>FMX</FrameworkType>
         <MainSource>MemDBTest.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Release</Config>
+        <Config Condition="'$(Config)'==''">Debug</Config>
         <Platform Condition="'$(Platform)'==''">Win64</Platform>
         <TargetedPlatforms>3</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -63,6 +63,9 @@
         <Base>true</Base>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base)'!=''">
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <Manifest_File>None</Manifest_File>
+        <VerInfo_Locale>2057</VerInfo_Locale>
         <DCC_Namespace>System;Xml;Data;Datasnap;Web;Soap;$(DCC_Namespace)</DCC_Namespace>
         <Icon_MainIcon>$(BDS)\bin\delphi_PROJECTICON.ico</Icon_MainIcon>
         <Icns_MainIcns>$(BDS)\bin\delphi_PROJECTICNS.icns</Icns_MainIcns>
@@ -162,8 +165,10 @@
         <DCCReference Include="..\..\NullStream\NullStream.pas"/>
         <DCCReference Include="..\..\LockAbstractions\LockAbstractions.pas"/>
         <DCCReference Include="..\..\SRWLockWrapper\SRWLockWrapper.pas"/>
-        <None Include="..\Ideas, and TODO.txt"/>
         <None Include="Performance figures.txt"/>
+        <None Include="..\README_Conditionals.txt"/>
+        <None Include="..\README_Ideas, and TODO.txt"/>
+        <None Include="..\README_Known_Issues.txt"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
